librp-sys/src/bindings.rs

extern "C" {
    #[doc = " Returns the current amount of decimated data in nanoseconds after trigger\n written into memory.\n @param time_ns Time in nanoseconds.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetTriggerDelayNs(time_ns: *mut i64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the number of valid data ponts before trigger.\n @param time_ns number of data points.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetPreTriggerCounter(value: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the trigger threshold value in volts. Makes the trigger when ADC value\n crosses this value.\n @param voltage Threshold value for the channel\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqSetTriggerLevel(
        channel: rp_channel_trigger_t,
        voltage: f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets currently set trigger threshold value in volts\n @param voltage Current threshold value for the channel\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetTriggerLevel(
        channel: rp_channel_trigger_t,
        voltage: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the trigger threshold hysteresis value in volts.\n Value must be outside to enable the trigger again.\n @param voltage Threshold hysteresis value for the channel\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqSetTriggerHyst(voltage: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets currently set trigger threshold hysteresis value in volts\n @param voltage Current threshold hysteresis value for the channel\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetTriggerHyst(voltage: *mut f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the acquire gain state. The gain should be set to the same value as it\n is set on the Red Pitaya hardware by the LV/HV gain jumpers. LV = 1V; HV =\n 20V.\n @param channel Channel A or B\n @param state High or Low state\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqSetGain(channel: rp_channel_t, state: rp_pinState_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the currently set acquire gain state in the library. It may not be\n set to the same value as it is set on the Red Pitaya hardware by the LV/HV\n gain jumpers. LV = 1V; HV = 20V.\n @param channel Channel A or B\n @param state Currently set High or Low state in the library.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetGain(channel: rp_channel_t, state: *mut rp_pinState_t)
        -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the currently set acquire gain in the library. It may not be set to\n the same value as it is set on the Red Pitaya hardware by the LV/HV gain\n jumpers. Returns value in Volts.\n @param channel Channel A or B\n @param voltage Currently set gain in the library. 1.0 or 20.0 Volts\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetGainV(channel: rp_channel_t, voltage: *mut f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns current position of ADC write pointer.\n @param pos Write pointer position\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetWritePointer(pos: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns position of ADC write pointer at time when trigger arrived.\n @param pos Write pointer position\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetWritePointerAtTrig(pos: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Starts the acquire. Signals coming from the input channels are acquired and\n written into memory.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqStart() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Stops the acquire.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqStop() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Resets the acquire writing state machine and set by default all parameters.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqReset() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Resets the acquire writing state machine.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqResetFpga() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Normalizes the ADC buffer position. Returns the modulo operation of ADC\n buffer size...\n @param pos position to be normalized\n @return Normalized position (pos % ADC_BUFFER_SIZE)"]
    pub fn rp_AcqGetNormalizedDataPos(pos: u32) -> u32;
}
extern "C" {
    #[doc = " Returns the ADC buffer in raw units from start to end position.\n\n @param channel Channel A or B for which we want to retrieve the ADC buffer.\n @param start_pos Starting position of the ADC buffer to retrieve.\n @param end_pos Ending position of the ADC buffer to retrieve.\n @param buffer The output buffer gets filled with the selected part of the ADC\n buffer.\n @param buffer_size Length of input buffer. Returns length of filled buffer.\n In case of too small buffer, required size is returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetDataPosRaw(
        channel: rp_channel_t,
        start_pos: u32,
        end_pos: u32,
        buffer: *mut i16,
        buffer_size: *mut u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the ADC buffer in Volt units from start to end position.\n\n @param channel Channel A or B for which we want to retrieve the ADC buffer.\n @param start_pos Starting position of the ADC buffer to retrieve.\n @param end_pos Ending position of the ADC buffer to retrieve.\n @param buffer The output buffer gets filled with the selected part of the ADC\n buffer.\n @param buffer_size Length of input buffer. Returns length of filled buffer.\n In case of too small buffer, required size is returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetDataPosV(
        channel: rp_channel_t,
        start_pos: u32,
        end_pos: u32,
        buffer: *mut f32,
        buffer_size: *mut u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the ADC buffer in raw units from specified position and desired size.\n Output buffer must be at least 'size' long.\n @param channel Channel A or B for which we want to retrieve the ADC buffer.\n @param pos Starting position of the ADC buffer to retrieve.\n @param size Length of the ADC buffer to retrieve. Returns length of filled\n buffer. In case of too small buffer, required size is returned.\n @param buffer The output buffer gets filled with the selected part of the ADC\n buffer.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetDataRaw(
        channel: rp_channel_t,
        pos: u32,
        size: *mut u32,
        buffer: *mut i16,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the ADC buffer in raw units from specified position and desired size.\n Output buffer must be at least 'size' long.\n @param channel Channel A or B for which we want to retrieve the ADC buffer.\n @param pos Starting position of the ADC buffer to retrieve.\n @param size Length of the ADC buffer to retrieve. Returns length of filled\n buffer. In case of too small buffer, required size is returned.\n @param buffer The output buffer gets filled with the selected part of the ADC\n buffer.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetDataRawV2(
        pos: u32,
        size: *mut u32,
        buffer: *mut u16,
        buffer2: *mut u16,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the ADC buffer in raw units from the oldest sample to the newest one.\n Output buffer must be at least 'size' long.\n CAUTION: Use this method only when write pointer has stopped (Trigger\n happened and writing stopped).\n @param channel Channel A or B for which we want to retrieve the ADC buffer.\n @param size Length of the ADC buffer to retrieve. Returns length of filled\n buffer. In case of too small buffer, required size is returned.\n @param buffer The output buffer gets filled with the selected part of the ADC\n buffer.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetOldestDataRaw(
        channel: rp_channel_t,
        size: *mut u32,
        buffer: *mut i16,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the latest ADC buffer samples in raw units.\n Output buffer must be at least 'size' long.\n @param channel Channel A or B for which we want to retrieve the ADC buffer.\n @param size Length of the ADC buffer to retrieve. Returns length of filled\n buffer. In case of too small buffer, required size is returned.\n @param buffer The output buffer gets filled with the selected part of the ADC\n buffer.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetLatestDataRaw(
        channel: rp_channel_t,
        size: *mut u32,
        buffer: *mut i16,
    ) -> ::std::os::raw::c_int;
}
